--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 }
   img{
   border-radius:50%;
-  shadow: 5px red;
+  shadow-box: 5px red;
   display: block;
   margin-left: 35px;
   margin-right: 55px;
@@ -15,7 +15,7 @@ body{
   float: left;
 }
 h1{
-  font-size: 20px;
+  font-size: 15px;
   padding-top: 2px;
   text-align: right;
   margin-right: 30px;
@@ -75,6 +75,7 @@ h1{
   font-size: 70px;
   margin: 35px;
   color: green;
+  margin-bottom: 0;
 }
 
 .skills{
@@ -86,8 +87,9 @@ h1{
   border-bottom-left-radius: 50px;
   border-bottom-right-radius: 50px;
   margin: 0px;
-  padding-left: 45px;
-  padding-bottom: 30px;
+  margin-top: 5px;
+  padding-left: 5px;
+  margin-bottom: 15px;
 }
 
 .skills1{
@@ -107,7 +109,7 @@ h1{
   border-top-left-radius: 40px;
   border-top-right-radius: 40px;
   text-decoration: none;
-  font-size: 30px;
+  font-size: 20px;
   padding: 5px;
   color: black;
   margin-inline-end: 15px;
@@ -288,7 +290,7 @@ h1{
 .descri2{
   margin-top: 5px;
   margin-bottom: 25px;
-  margin-left: 100px;
+  margin-left: 155px;
   font-size: 10px;
 }
 .antlialogo{
